Fixed alignment issues

--- a/frontend/src/styles/components/builder/_ConjunctionGroup.scss
+++ b/frontend/src/styles/components/builder/_ConjunctionGroup.scss
@@ -59,8 +59,4 @@
     margin-left: 10px;
     cursor: pointer;
   }
-
-  .delete-code-button {
-    margin-left: 50px;
-  }
 }
