--- a/frontend/src/styles/components/builder/_Element.scss
+++ b/frontend/src/styles/components/builder/_Element.scss
@@ -66,7 +66,6 @@
 
     .modifier__deletebutton {
       text-align: right;
-      margin-right: 12px;
     }
 
     > .warning {
@@ -107,5 +106,15 @@
 }
 
 .bold {
+  text-align: right;
+}
+
+#vsac-controls {
+  > span {
+    margin-left: 20px;
+  }
+}
+
+.align-right {
   text-align: right;
 }
