--- a/frontend/src/styles/components/builder/_ElementSelect.scss
+++ b/frontend/src/styles/components/builder/_ElementSelect.scss
@@ -35,10 +35,6 @@
     margin-left: 0.5em;
     color: $gray;
   }
-
-  &__modal {
-    margin-left: 0.5em;
-  }
 }
 
 .element-modal {
